--- a/package.json
+++ b/package.json
@@ -17,10 +17,15 @@
     "@angular/platform-browser": "^19.1.0",
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
+    "@sweetalert2/ngx-sweetalert2": "^13.0.0",
     "@tailwindcss/postcss": "^4.0.7",
+    "chart.js": "^3.9.1",
+    "date-fns": "^4.1.0",
     "jwt-decode": "^4.0.0",
+    "ng2-charts": "^3.1.2",
     "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.17.2",
     "tailwindcss": "^4.0.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
