--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@angular/platform-browser": "^19.1.0",
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@sweetalert2/ngx-sweetalert2": "^13.0.0",
     "@tailwindcss/postcss": "^4.0.7",
     "chart.js": "^3.9.1",
     "date-fns": "^4.1.0",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
     "ng2-charts": "^3.1.2",
     "postcss": "^8.5.3",
