--- a/package.json
+++ b/package.json
@@ -26,10 +26,8 @@
     "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
     "ng2-charts": "^3.1.2",
-    "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.17.2",
-    "tailwindcss": "^4.0.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -38,12 +36,15 @@
     "@angular/cli": "^19.1.8",
     "@angular/compiler-cli": "^19.1.0",
     "@types/jasmine": "~5.1.0",
+    "autoprefixer": "^10.4.21",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.4",
     "typescript": "~5.7.2"
   }
 }
